--- a/_posts/2016-04-16-project-4.markdown
+++ b/_posts/2016-04-16-project-4.markdown
@@ -4,7 +4,7 @@ subtitle: digital
 layout: default
 modal-id: 4
 date: 2016-04-01
-img: ['pfe_ui.gif']
+img: ['PFE_UI.gif']
 thumbnail: zooni-thumb.jpg
 alt: image-alt
 project-date: April 2016
