--- a/_posts/2014-12-01-project-7.markdown
+++ b/_posts/2014-12-01-project-7.markdown
@@ -10,6 +10,6 @@ alt: image-alt
 project-date: April 2016
 client: n/a
 category: exploration
-description: Un*Spoken is an interactive installation that explores the contrasts between laughter and crying and how these non-language based utterances relate to the emotional responses that arise when one hears music. Emotions compel us and create a universal phenomenon in which we understand and relate to others. Using project driven research and by translating a database of such sounds into music that can be played back, the piece allows the audience to come to their own conclusions and comparisons. Un*Spoken was created by transcribing audio into dot compositions that can be played through a music box. Because these emotions are so similar, they can easily be misinterpreted but when these non-verbal methods of communication are stripped and transcribed, the potential for an emotional vocabulary is reestablished.<p><i>Callaborative work with <a href="http://meganprycedesigns.com">Megan Pryce</i></a></p>
+description: Un*Spoken is an interactive installation that explores the contrasts between laughter and crying and how these non-language based utterances relate to the emotional responses that arise when one hears music. Emotions compel us and create a universal phenomenon in which we understand and relate to others. Using project driven research and by translating a database of such sounds into music that can be played back, the piece allows the audience to come to their own conclusions and comparisons. Un*Spoken was created by transcribing audio into dot compositions that can be played through a music box. Because these emotions are so similar, they can easily be misinterpreted but when these non-verbal methods of communication are stripped and transcribed, the potential for an emotional vocabulary is reestablished.<p><p style="color:#95a5a6;"><i>Callaborative work with <a href="http://meganprycedesigns.com">Megan Pryce</i></a></p>
 
 ---
