--- a/_posts/2014-12-01-project-7.markdown
+++ b/_posts/2014-12-01-project-7.markdown
@@ -3,7 +3,8 @@ title: Un*spoken
 subtitle: exploration
 layout: default
 modal-id: 7
-date: 2014-12-01
+date: 2016-01-06
+list: 1
 img: ['unspoke01.JPG','unspoke3.png', 'unspoke4.JPG']
 thumbnail: unspoke-thumb.jpg
 alt: image-alt
