--- a/_posts/2016-04-01-project-4.markdown
+++ b/_posts/2016-04-01-project-4.markdown
@@ -10,6 +10,5 @@ alt: image-alt
 project-date: April 2016
 client: Zooniverse.org
 category: digital
-description: UI updates to Zooniverse.org, a joint Adler Planetarium and Oxford University citizen science platform, Project Builder landing pages. The new design encourages comminuty involvement and allows the volunteers a quick glimpse at up-to-date  activties occuring with a given project and the project's reasearch team.
-
+description: UI updates to Zooniverse.org, a joint Adler Planetarium and Oxford University citizen science platform, Project Builder landing pages. The new design encourages community involvement and allows the volunteers a quick glimpse at up-to-date  activities occurring with a given project and the project's research team.
 ---
