--- a/_posts/2016-02-01-project-9.markdown
+++ b/_posts/2016-02-01-project-9.markdown
@@ -4,7 +4,7 @@ subtitle: digital
 layout: default
 modal-id: 9
 date: 2016-01-10
-img: ['CPUtoEDU-01.png' , 'CPUtoEDU-02.png', 'CPUtoEDU-03.png']
+img: ['CPUtoEDU-01.png' , 'CPUtoEDU-02.png']
 thumbnail: CPUEDU-thumb.jpg
 alt: image-alt
 project-date: May 2016
