--- a/_posts/2016-04-01-project-4.markdown
+++ b/_posts/2016-04-01-project-4.markdown
@@ -4,7 +4,7 @@ subtitle: digital
 layout: default
 modal-id: 11
 date: 2016-01-11
-img: ['zooniverse_landing.png']
+img: ['zooniverse_landing.jpg']
 thumbnail: zooni-thumb2.png
 alt: image-alt
 project-date: April 2016
