--- a/_posts/2016-08-10-project-10.markdown
+++ b/_posts/2016-08-10-project-10.markdown
@@ -4,7 +4,7 @@ subtitle: digital
 layout: default
 modal-id: 10
 date: 2016-01-07
-img: ['NfNScreen.png']
+img: ['NfNScreen.jpg']
 thumbnail: NfNScreen-thumb.jpg
 alt: image-alt
 project-date: Aug 2016
