--- a/_posts/2016-10-10-project-11.markdown
+++ b/_posts/2016-10-10-project-11.markdown
@@ -10,6 +10,6 @@ alt: image-alt
 project-date: Aug 2016
 client: The Adler Planetarium
 category: identity & digital
-description: Team Stratonauts is a teen focused, curiosity driven cohort of high school aged space pioneers that is part of the Far Horizons Program. The identity is simple, illustrative, and reminds people of the classic hay-day of space travel—sputnik, the moon landing, the space station. It feels fast, it feels impactful. It’s stratospheric curves and lines are visually intuitive, and reference years of science fiction and reality.
+description: Team Stratonauts is a teen focused, curiosity driven cohort of high school aged space pioneers that is part of the Far Horizons Program. The identity is simple, illustrative, and reminds people of the classic hay-day of space travel—sputnik, the moon landing, the space station. It feels fast, it feels impactful. It’s stratospheric curves and lines are visually intuitive, and reference years of science fiction and reality.<p><p style="color:#95a5a6;"><i> Collaborative work <a href="http://wewantto.design">We Want To __</a> 
 
 ---
