--- a/_posts/2016-10-10-project-11.markdown
+++ b/_posts/2016-10-10-project-11.markdown
@@ -4,7 +4,7 @@ subtitle: identity & digital
 layout: default
 modal-id: 12
 date: 2016-01-12
-img: ['stratonauts-01.jpg' , 'stratonauts-02.png' , 'stratonauts_page02.jpg' , 'stratonauts_page01.jpg' , 'stratonauts-12.jpg' , 'stratonauts-process.JPG'  ]
+img: ['stratonauts-01.jpg' , 'stratonauts-02.jpg' , 'stratonauts_page02.jpg' , 'stratonauts_page01.jpg' , 'stratonauts-12.jpg' , 'stratonauts-process.JPG'  ]
 thumbnail: stratonauts_thumb.jpg
 alt: image-alt
 project-date: Aug 2016
