--- a/_posts/2016-01-18-project-1.markdown
+++ b/_posts/2016-01-18-project-1.markdown
@@ -10,6 +10,6 @@ alt: image-alt
 project-date: February 2017
 client: MD Cannabis
 category: identity
-description: Canopy Cannabis Co. started with a few core elements, a spirit of hard-work and a passion, with an unyielding attention to hand hewn details. It pays homage to the overarching love and labor that goes into making a top quality product. The overall tone of Canopy Cannabis Co. is conversational, straightforward, and honest with a strong desire to focus on what people need. It is open-minded but not empty-headed. Canopy Cannabis Co. is old school but not high school. 
+description: Canopy Cannabis Co. started with a few core elements, a spirit of hard-work and a passion, with an unyielding attention to hand hewn details. It pays homage to the overarching love and labor that goes into making a top quality product. The overall tone of Canopy Cannabis Co. is conversational, straightforward, and honest with a strong desire to focus on what people need. Canopy Cannabis Co. is open-minded but never empty-headed. 
 
 ---
