--- a/_posts/2016-02-01-project-9.markdown
+++ b/_posts/2016-02-01-project-9.markdown
@@ -3,13 +3,13 @@ title: CPU to EDU
 subtitle: digital
 layout: default
 modal-id: 9
-date: 2016-01-05
-img: ['CPUtoEDU-01.jpg' , 'CPUtoEDU-02.jpg']
+date: 2016-01-06
+img: ['CPUtoEDU-01.jpg']
 thumbnail: CPUEDU-thumb.jpg
 alt: image-alt
 project-date: May 2016
 client: cleverbridge
 category: digital
-description: Many businesses have unwanted hardware, like old desktop computers, that are often discarded and thrown away into our landfills. Meanwhile, many Chicago Public Schools’ students are falling behind in STEM studies because they lack access to technology. CPU to EDU is a resource that allows businesses to donate their unwanted materials to Chicago students in need. <p> Haphazardly thrown together during cleverbridge's <a href="www.https://hacktothefuture.splashthat.com/">Hack to the Future Hackathon</a>, our goal was to provide the resources to help students extend learning in the classroom and beyond.</p> <p> <a href="https://cputoedu.herokuapp.com/">See the live site here</a>
+description: Many businesses have unwanted hardware, like old desktop computers and tablets, that are often discarded and thrown away into our landfills. Meanwhile, many Chicago Public Schools’ students are falling behind in STEM studies because they lack access to technology. CPU to EDU is a resource that allows businesses to donate their unwanted materials to Chicago students in need. <p> Haphazardly thrown together during cleverbridge's 5 hour <a href="www.https://hacktothefuture.splashthat.com/">Hack to the Future Hackathon</a>, our goal was to provide the resources to help students extend learning in the classroom and beyond.</p> <p> <a href="https://cputoedu.herokuapp.com/">See the live site here</a>
 
 ---
