--- a/_posts/2016-04-16-project-7.markdown
+++ b/_posts/2016-04-16-project-7.markdown
@@ -10,6 +10,6 @@ alt: image-alt
 project-date: April 2017
 client: fiber.google.com
 category: digital
-description: Google Fiber came to us asking if we could find a way to design an experience that increased customer signup and customer recognition in their existing markets. As I worked with the Fiber team, I wanted to find a way to leverage the love of Google's brand and highlight Google Fiber's unyielding dedication to providing the best customer service of any internet provider. Working closely with Google Fiber's marketing team, I created several variations of pricing options, social proofing modules, and digital emailer campaigns for desktop and mobile.
+description: Google Fiber came to us asking if we could find a way to design an experience that increased customer signup and customer recognition in their existing markets. As I worked with the Fiber team, I wanted to find a way to leverage the love of Google's brand and highlight Google Fiber's unyielding dedication to providing the best customer service of any internet provider. Working closely with Google Fiber's marketing team, I created several variations of pricing options, social proofing modules, and digital emailer campaigns for desktop and mobile. <p> <a href="https://www.dropbox.com/s/v9lh5axjvcsjb8u/googlefiber.pdf?dl=0">See more Google Fiber work here (password required)</a>
 
 ---
