--- a/_posts/2016-04-16-project-7.markdown
+++ b/_posts/2016-04-16-project-7.markdown
@@ -3,8 +3,8 @@ title: Google Fiber
 subtitle: digital
 layout: default
 modal-id: 4
-date: 2016-01-06
-img: [ 'fiberphoe.jpg']
+date: 2016-01-07
+img: [ 'fiber-03.jpg']
 thumbnail: fiber-thumb.png
 alt: image-alt
 project-date: April 2017
